--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.x"
+          check-latest: true
       - run: pip install nox
       - run: nox -s docs
 
